--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper centre">
       <h3 class="text-white">Random Swatch Generator <i class="fas fa-palette"></i></h3>
 
-      <div class="block-wrapper">
+      <div class="block-wrapper shadow">
         <div class="block"></div>
         <div class="block-overlay p-t-20 p-l-20">
           <h4 class="m-0 m-b-5">Colour information</h4>
