Created a containing box

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
     <main class="wrapper centre">
-      <h3 class="text-white">Swatch generator <i class="fas fa-palette fa-gradient"></i></h3>
+      <h3 class="text-white m-b-10">Swatch generator <i class="fas fa-palette fa-gradient"></i></h3>
       <div class="block-wrapper shadow">
         <div class="block"></div>
         <div class="block-overlay p-t-20 p-l-20">
