Added readme.md and organised files

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
     </div>
 
-<script src="colour.js"></script>
-    <script src="script.js"></script>
+    <script src="/js/colour.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
