--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <body>
 
 
-    <main class="wrapper centre">
+    <main class="wrapper centre shadow-strong">
       <h3 class="text-white m-b-10">Swatch generator <i class="fas fa-palette fa-gradient"></i></h3>
-      <div class="block-wrapper shadow">
+      <div class="block-wrapper shadow-medium">
         <div class="block"></div>
         <div class="block-overlay p-t-20 p-l-20">
           <h4 class="m-0 m-b-5">Colour information</h4>
