--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Random Hex Colour</title>
+    <title>Random hex colour swatch generator - oop</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Merienda+One&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet" type="text/css"></link>
   </head>
   <body>
 
-
     <main class="wrapper centre shadow-strong">
       <h3 class="text-white m-b-10">Swatch generator <i class="fas fa-palette fa-gradient"></i></h3>
       <div class="block-wrapper shadow-medium">
         <div class="block"></div>
         <div class="block-overlay p-t-20 p-l-20">
-          <h4 class="m-0 m-b-5">Colour information</h4>
+          <h4 class="m-0 m-b-5">Colour values</h4>
           <p class="font-size-14px m-0"></p>
         </div>
       </div>
@@ -32,5 +31,6 @@
 
     <script src="/js/colour.js"></script>
     <script src="/js/script.js"></script>
+
   </body>
 </html>
