--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <main class="wrapper centre shadow-strong">
-      <h3 class="text-white m-b-10">Swatch generator <i class="fas fa-palette fa-gradient"></i></h3>
+      <h3 class="text-white m-b-20">Swatch generator <i class="fas fa-palette fa-gradient"></i></h3>
       <div class="block-wrapper shadow-medium">
         <div class="block"></div>
         <div class="block-overlay p-t-20 p-l-20">
@@ -22,7 +22,7 @@
 
       <a href="#" class="hex-value text-white font-size-16px m-t-15" target="_blank"></a>
 
-      <button class="btn font-size-16px m-t-10">new</button><br>
+      <button class="btn font-size-16px m-t-10">New swatch</button><br>
       
       <div class="swatch-wrapper m-t-10">
         <span class="swatch" id="0"></span>
