Added info icon to centre of swatch

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <h3 class="text-white m-b-20">Swatch generator <i class="fas fa-palette fa-gradient"></i></h3>
       <div class="block-wrapper shadow-medium">
         <div class="block"></div>
-        <div class="block-overlay p-t-20 p-l-20">
-          <h4 class="m-0 m-b-5">Colour values</h4>
-          <p class="font-size-14px m-0"></p>
+        <div class="info centre">
+          <i class="fa fa-info-circle" aria-hidden="true"></i>
         </div>
+        <div class="block-overlay p-t-20 p-l-20"></div>
       </div>
 
       <a href="#" class="hex-value text-white font-size-16px m-t-15" target="_blank"></a>
