Made swatches area scrollable

--- a/index.html
+++ b/index.html
@@ -10,24 +10,26 @@
   </head>
   <body>
 
-    <main class="wrapper centre shadow-strong">
-      <h3 class="text-white m-b-20">Swatch generator <i class="fas fa-palette fa-gradient"></i></h3>
-      <div class="block-wrapper shadow-medium">
-        <div class="block"></div>
-        <div class="info centre">
-          <i class="fa fa-info-circle" aria-hidden="true"></i>
+    <main class="centre vh-100">
+      <section class="wrapper centre shadow-strong">
+        <h3 class="text-white m-b-20">Swatch generator <i class="fas fa-palette fa-gradient"></i></h3>
+        <div class="block-wrapper shadow-medium">
+          <div class="block"></div>
+          <div class="info centre">
+            <i class="fa fa-info-circle" aria-hidden="true"></i>
+          </div>
+          <div class="block-overlay p-t-20 p-l-20"></div>
         </div>
-        <div class="block-overlay p-t-20 p-l-20"></div>
-      </div>
 
-      <a href="#" class="hex-value text-white font-size-16px m-t-15" target="_blank"></a>
+        <a href="#" class="hex-value text-white font-size-16px m-t-15" target="_blank"></a>
 
-      <button class="btn font-size-16px m-t-10">New swatch</button><br>
-      
-      <div class="swatch-wrapper m-t-10">
-        <span class="swatch" id="0"></span>
-      </div>
-    </div>
+        <button class="btn font-size-16px m-t-10">New swatch</button><br>
+        
+        <div class="swatch-wrapper m-t-10">
+          <span class="swatch" id="0"></span>
+        </div>
+      </section>
+    </main>
 
     <script src="/js/colour.js"></script>
     <script src="/js/script.js"></script>
