--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
           <span class="swatch" id="0"></span>
         </div>
       </section>
+
+      <p class="text-center m-b-20 text-grey">&copy; Copyright 2020 <a href="https://rolandlevy.co.uk">see more of my projects</a></p>
+
     </main>
 
     <script src="/js/colour.js"></script>
