--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="block-overlay p-t-20 p-l-20"></div>
         </div>
 
-        <a href="#" class="hex-value text-white font-size-16px m-t-15" target="_blank"></a>
+        <a href="#" class="hex-value text-white new-tab-icon font-size-16px m-t-15" target="_blank"></a>
 
         <button class="btn font-size-16px m-t-10">New swatch</button><br>
         
@@ -30,7 +30,7 @@
         </div>
       </section>
 
-      <p class="text-center m-b-20 text-grey">&copy; Copyright 2020 <a href="https://rolandlevy.co.uk">see more of my projects</a></p>
+      <footer class="text-center m-b-20 text-grey">&copy; Copyright <span class="this-year">2020</span> <a href="https://rolandlevy.co.uk" target="_blank" class="new-tab-icon">see more of my projects</a></footer>
 
     </main>
 
