Fixed layout problems

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 
-    <main class="centre vh-100">
+    <main class="vh-100">
       <section class="wrapper centre shadow-strong">
         <h3 class="text-white m-b-20">Swatch generator <i class="fas fa-palette fa-gradient"></i></h3>
         <div class="block-wrapper shadow-medium">
