Made year in footer dynamic

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
       </section>
 
-      <footer class="text-center m-b-20 text-grey">&copy; Copyright <span class="this-year">2020</span> <a href="https://rolandlevy.co.uk" target="_blank" class="new-tab-icon">see more of my projects</a></footer>
+      <footer class="text-center m-b-20 text-grey">&copy; Copyright <span class="this-year"></span> <a href="https://rolandlevy.co.uk" target="_blank" class="new-tab-icon">see more of my projects</a></footer>
 
     </main>
 
